confik-macros/tests/trybuild/compile-fail/config-name-value.stderr
error: Name-value arguments are not supported. Use #[confik(...)]
 --> tests/trybuild/compile-fail/config-name-value.rs:3:7
  |
3 |     #[confik = "foo"]
  |       ^^^^^^
